# uniffi-kotlin-multiplatform-bindings

./: Cargo.toml  README.md
kotlin-uniffi-base/: build.gradle.kts  settings.gradle.kts
kotlin-uniffi-base/src/commonMain/kotlin/: Disposable.kt  FFIObject.kt  FfiConverter.kt  FfiConverterBoolean.kt  FfiConverterByte.kt  FfiConverterCallbackInterface.kt  FfiConverterDouble.kt  FfiConverterDuration.kt  FfiConverterFloat.kt  FfiConverterInstant.kt  FfiConverterInt.kt  FfiConverterLong.kt  FfiConverterRustBuffer.kt  FfiConverterShort.kt  FfiConverterString.kt  FfiConverterUByte.kt  FfiConverterUInt.kt  FfiConverterULong.kt  FfiConverterUShort.kt  ForeignBytes.kt  ForeignCallback.kt  InternalException.kt  Pointer.kt  RustBuffer.kt  RustCallStatus.kt  UniffiHandleMap.kt  rustCall.kt
kotlin-uniffi-base/src/jvmMain/kotlin/: ForeignBytes.kt  ForeignCallbackJvm.kt  Pointer.kt  RustCallStatusJvm.kt  UniffiHandleMap.kt
kotlin-uniffi-base/src/nativeInterop/cinterop/uniffi/: uniffi.h
kotlin-uniffi-base/src/nativeMain/kotlin/: ForeignCallback.kt  Pointer.kt  UniFfiForeignExecutorCallback.kt  UniFfiHandleMap.kt
src/: lib.rs
src/gen_kotlin_multiplatform/: executor.rs  miscellany.rs  mod.rs  primitives.rs
src/templates/: helpers.j2
src/templates/common/: AsyncTypesTemplate.kt.j2  CallbackInterfaceTemplate.kt.j2  CustomTypeTemplate.kt.j2  EnumTemplate.kt.j2  ErrorTemplate.kt.j2  FfiConverterForeignExecutor.kt.j2  MapTemplate.kt.j2  ObjectTemplate.kt.j2  OptionalTemplate.kt.j2  RecordTemplate.kt.j2  SequenceTemplate.kt.j2  TopLevelFunctionsTemplate.kt.j2  UniFFILibTemplate.kt.j2  UniFfiForeignExecutorCallback.kt.j2
src/templates/headers/: BridgingHeaderTemplate.h.j2
src/templates/jvm/: AsyncTypesTemplate.kt.j2  RustBufferTemplate.kt.j2  UniFFILibTemplate.kt.j2  UniFfiForeignExecutorCallback.kt.j2
src/templates/native/: AsyncTypesTemplate.kt.j2  CallbackInterfaceTemplate.kt.j2  RustBufferTemplate.kt.j2  RustCallStatusTemplate.kt.j2  UniFfiForeignExecutorCallback.kt.j2
tests/: build.gradle.kts  gradle.properties  settings.gradle.kts
tests/callbacks/src/commonTest/kotlin/: CallbacksTest.kt
tests/callbacks/src/nativeInterop/cinterop/: uniffi.def
tests/callbacks/src/nativeMain/kotlin/: Main.kt
tests/callbacks/uniffi/: Cargo.toml  build.rs  uniffi.toml
tests/callbacks/uniffi/src/: callbacks.udl  lib.rs
tests/coverall/src/commonTest/kotlin/: CoverallTest.kt
tests/coverall/src/nativeInterop/cinterop/: uniffi.def
tests/coverall/uniffi/: Cargo.toml  build.rs  uniffi.toml
tests/coverall/uniffi/src/: lib.rs
tests/external_types/src/commonTest/kotlin/: ExternalTypesTest.kt
tests/external_types/src/nativeInterop/cinterop/: uniffi.def
tests/external_types/uniffi/: Cargo.toml  build.rs  uniffi.toml
tests/external_types/uniffi/crate_one/: Cargo.toml
tests/external_types/uniffi/crate_two/: Cargo.toml
tests/external_types/uniffi/src/: external_types.udl  lib.rs
tests/futures/src/commonTest/kotlin/: FuturesTest.kt
tests/futures/src/nativeInterop/cinterop/: uniffi.def
tests/futures/uniffi/: Cargo.toml  build.rs  uniffi.toml
tests/futures/uniffi/src/: lib.rs
tests/keywords/src/commonTest/kotlin/: KeywordsTest.kt
tests/keywords/src/nativeInterop/cinterop/: uniffi.def
tests/keywords/uniffi/: Cargo.toml  build.rs
tests/keywords/uniffi/src/: keywords.udl  lib.rs
