[package]
name = "callbacks"
version = "0.1.0"
edition = "2021"

[lib]
name = "callbacks"
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = "0.21.0"
uniffi_macros = "0.21.0"
once_cell = "1.12"
thiserror = "1.0"

[build-dependencies]
uniffi_build = { version = "0.21.0", features = ["builtin-bindgen"] }
uniffi_bindgen = "0.21.0"
uniffi-kotlin-multiplatform = { path = "../../.." }
camino = "1.1.1"