[package]
name = "callbacks"
version = "0.1.0"
edition = "2021"

[lib]
name = "callbacks"
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", rev= "22b8c21f117faa95c6d398baad463ef7f108749e" }
uniffi_macros = { git = "https://github.com/mozilla/uniffi-rs.git", rev= "22b8c21f117faa95c6d398baad463ef7f108749e" }
once_cell = "1.12"
thiserror = "1.0"

[build-dependencies]
uniffi_build = { git = "https://github.com/mozilla/uniffi-rs.git", rev= "22b8c21f117faa95c6d398baad463ef7f108749e" }
uniffi_bindgen = { git = "https://github.com/mozilla/uniffi-rs.git", rev= "22b8c21f117faa95c6d398baad463ef7f108749e" }
uniffi-kotlin-multiplatform = { path = "../../.." }
camino = "1.1.1"

