[package]
name = "callbacks"
version = "0.1.0"
edition = "2021"

[lib]
name = "callbacks"
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = "0.23.0"
uniffi_macros = "0.23.0"
once_cell = "1.12"
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.23.0", features = ["build"] }
uniffi_bindgen = "0.23.0"
uniffi-kotlin-multiplatform = { path = "../../.." }
camino = "1.1.1"