[package]
name = "external_types"
version = "0.1.0"
edition = "2021"

[lib]
name = "external_types"
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = "0.21.0"
uniffi_macros = "0.21.0"
once_cell = "1.12"
thiserror = "1.0"
crate_one = { path = "crate_one" }
crate_two = { path = "crate_two" }

[build-dependencies]
uniffi_build = { version = "0.21.0", features = ["builtin-bindgen"] }
uniffi_bindgen = "0.21.0"
uniffi-kotlin-multiplatform = { path = "../../.." }
camino = "1.1.1"
