[package]
name = "external_types"
version = "0.1.0"
edition = "2021"

[lib]
name = "external_types"
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = "0.23.0"
uniffi_macros = "0.23.0"
once_cell = "1.12"
thiserror = "1.0"
crate_one = { path = "crate_one" }
crate_two = { path = "crate_two" }

[build-dependencies]
uniffi = { version = "0.23.0", features = ["build"] }
uniffi_bindgen = "0.23.0"
uniffi-kotlin-multiplatform = { path = "../../.." }
camino = "1.1.1"
